--- a/TestCases/turbomachinery/transonic_stator_2D/transonic_stator_rst.cfg
+++ b/TestCases/turbomachinery/transonic_stator_2D/transonic_stator_rst.cfg
@@ -24,7 +24,7 @@ KIND_TURB_MODEL= SST
 MATH_PROBLEM= DIRECT
 %
 % Restart solution (NO, YES)
-RESTART_SOL= YES
+RESTART_SOL= NO
 %
 % Discard the data storaged in the solution and geometry files
 % e.g. AOA, dCL/dAoA, dCD/dCL, iter, etc.
@@ -279,7 +279,7 @@ CFL_REDUCTION_TURB= 1.0
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 % Number of total iterations
-ITER= 201
+ITER= 2001
 % Convergence criteria (CAUCHY, RESIDUAL)
 %
 CONV_CRITERIA= RESIDUAL
@@ -318,7 +318,7 @@ SOLUTION_FILENAME= solution_flow_sst.dat
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output file format (PARAVIEW, TECPLOT, STL)
-TABULAR_FORMAT= CSV
+TABULAR_FORMAT= TECPLOT
 %
 % Output file convergence history (w/o extension) 
 CONV_FILENAME= history
