--- a/config_template.cfg
+++ b/config_template.cfg
@@ -192,6 +192,12 @@ FREESTREAM_VISCOSITY= 1.853E-5
 % Free-stream turbulence intensity
 FREESTREAM_TURBULENCEINTENSITY= 0.05
 %
+% Fix turbulence quantities to far-field values inside an upstream half-space
+TURB_FIXED_VALUES= NO
+%
+% Shift of the fixed values half-space, in space units in the direction of far-field velocity
+TURB_FIXED_VALUES_DOMAIN= -1.0
+%
 % Free-stream ratio between turbulent and laminar viscosity
 FREESTREAM_TURB2LAMVISCRATIO= 10.0
 %
