update v&v, fix logic for default

--- a/TestCases/vandv/rans/bump_in_channel/turb_bump_sst.cfg
+++ b/TestCases/vandv/rans/bump_in_channel/turb_bump_sst.cfg
@@ -1,7 +1,7 @@
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 SOLVER= RANS
 KIND_TURB_MODEL= SST
-%SST_OPTIONS= V2003m
+SST_OPTIONS= V1994m
 RESTART_SOL= YES
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 MACH_NUMBER= 0.2
