--- a/TestCases/vandv/rans/flatplate/turb_flatplate_sst.cfg
+++ b/TestCases/vandv/rans/flatplate/turb_flatplate_sst.cfg
@@ -1,7 +1,7 @@
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 SOLVER= RANS
 KIND_TURB_MODEL= SST
-%SST_OPTIONS= V2003m
+SST_OPTIONS= V1994m
 RESTART_SOL= YES
 % ----------- COMPRESSIBLE AND INCOMPRESSIBLE FREE-STREAM DEFINITION ----------%
 MACH_NUMBER= 0.2
@@ -55,7 +55,7 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 CONV_FIELD= RMS_DENSITY
 CONV_RESIDUAL_MINVAL= -13
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
-MESH_FILENAME= mesh_flatplate_turb_035x025.su2 
+MESH_FILENAME= mesh_flatplate_turb_035x025.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
 SOLUTION_FILENAME= solution_flow.dat
