--- a/TestCases/nicf/datadriven/datadriven_nozzle.cfg
+++ b/TestCases/nicf/datadriven/datadriven_nozzle.cfg
@@ -15,7 +15,7 @@
 SOLVER= RANS
 KIND_TURB_MODEL= SST
 MATH_PROBLEM= DIRECT
-RESTART_SOL= NO
+RESTART_SOL= YES
 SYSTEM_MEASUREMENTS= SI
 %
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
@@ -89,7 +89,7 @@ CFL_REDUCTION_TURB= 1.0
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 % Number of total iterations
-ITER= 51
+ITER= 10
 CONV_RESIDUAL_MINVAL= -24
 CONV_STARTITER= 10
 
@@ -121,7 +121,7 @@ VOLUME_FILENAME= flow
 SURFACE_FILENAME= surface_flow
 %
 % Writing solution file frequency
-OUTPUT_WRT_FREQ= 10
+OUTPUT_WRT_FREQ= 500
 %
 % Screen output
 SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG)
