--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -25,6 +25,7 @@ jobs:
       matrix:
         config_set: [BaseMPI, ReverseMPI, ForwardMPI, BaseNoMPI, ReverseNoMPI, ForwardNoMPI, BaseOMP, ReverseOMP, ForwardOMP]
         include:
+          - container_image: docker://ghcr.io/su2code/su2/build-su2:230629-0917
           - config_set: BaseMPI
             flags: '-Denable-pywrapper=true -Denable-coolprop=true -Denable-tests=true --warnlevel=2 --werror'
           - config_set: ReverseMPI
@@ -52,12 +53,12 @@ jobs:
           key: ${{ matrix.config_set }}-${{ github.sha }}
           restore-keys: ${{ matrix.config_set }}
       - name: Pre Cleanup
-        uses: docker://ghcr.io/su2code/su2/build-su2:230629-0917
+        uses: ${{ matrix.container_image }}
         with:
           entrypoint: /bin/rm
           args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
       - name: Build
-        uses: docker://ghcr.io/su2code/su2/build-su2:230629-0917
+        uses: ${{ matrix.container_image }}
         with:
           args: -b ${{github.ref}} -f "${{matrix.flags}}"
       - name: Compress binaries
@@ -68,7 +69,7 @@ jobs:
           name: ${{ matrix.config_set }}
           path: install_bin.tgz
       - name: Post Cleanup
-        uses: docker://ghcr.io/su2code/su2/build-su2:230629-0917
+        uses: ${{ matrix.container_image }}
         with:
           entrypoint: /bin/rm
           args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
@@ -81,6 +82,7 @@ jobs:
       matrix:
         testscript: ['vandv.py', 'tutorials.py', 'parallel_regression.py', 'parallel_regression_AD.py', 'serial_regression.py', 'serial_regression_AD.py', 'hybrid_regression.py', 'hybrid_regression_AD.py']
         include:
+          - container_image: docker://ghcr.io/su2code/su2/test-su2:230629-0917
           - testscript: 'vandv.py'
             tag: MPI
           - testscript: 'tutorials.py'
@@ -99,7 +101,7 @@ jobs:
             tag: OMP
     steps:
       - name: Pre Cleanup
-        uses: docker://ghcr.io/su2code/su2/test-su2:230629-0917
+        uses: ${{ matrix.container_image }}
         with:
           entrypoint: /bin/rm
           args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
@@ -125,12 +127,12 @@ jobs:
           chmod a+x $BIN_FOLDER/*
           ls -lahR $BIN_FOLDER
       - name: Run Tests in Container
-        uses: docker://ghcr.io/su2code/su2/test-su2:230629-0917
+        uses: ${{ matrix.container_image }}
         with:
           # -t <Tutorials-branch> -c <Testcases-branch>
           args: -b ${{github.ref}} -t develop -c develop -s ${{matrix.testscript}}
       - name: Cleanup
-        uses: docker://ghcr.io/su2code/su2/test-su2:230629-0917
+        uses: ${{ matrix.container_image }}
         with:
           entrypoint: /bin/rm
           args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
@@ -143,6 +145,7 @@ jobs:
       matrix:
         testdriver: ['test_driver', 'test_driver_AD', 'test_driver_DD']
         include:
+          - container_image: docker://ghcr.io/su2code/su2/test-su2:230629-0917
           - testdriver: 'test_driver'
             tag: MPI
           - testdriver: 'test_driver_AD'
@@ -151,7 +154,7 @@ jobs:
             tag: MPI
     steps:
       - name: Pre Cleanup
-        uses: docker://ghcr.io/su2code/su2/test-su2:230629-0917
+        uses: ${{ matrix.container_image }}
         with:
           entrypoint: /bin/rm
           args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
@@ -212,11 +215,11 @@ jobs:
           echo $PWD
           ls -lahR
       - name: Run Unit Tests
-        uses: docker://ghcr.io/su2code/su2/test-su2:230629-0917
+        uses: ${{ matrix.container_image }}
         with:
           entrypoint: install/bin/${{matrix.testdriver}}
       - name: Post Cleanup
-        uses: docker://ghcr.io/su2code/su2/test-su2:230629-0917
+        uses: ${{ matrix.container_image }}
         with:
           entrypoint: /bin/rm
           args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
