--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -177,6 +177,51 @@ jobs:
         with:
           entrypoint: /bin/rm
           args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
+  thread_sanitizer_tests:
+    runs-on: ${{ inputs.runner || 'ubuntu-latest' }}
+    name: Thread Sanitizer Tests
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        testscript: ['hybrid_regression.py', 'hybrid_regression_AD.py']
+    steps:
+      - name: Pre Cleanup
+        uses: docker://ghcr.io/su2code/su2/test-su2-tsan:230704-1323
+        with:
+          entrypoint: /bin/rm
+          args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
+      - name: Download All artifacts
+        uses: actions/download-artifact@v3
+      - name: Uncompress and Move Binaries
+        run: |
+          BIN_FOLDER="$PWD/install/bin"
+          mkdir -p $BIN_FOLDER
+          ls -lah $BIN_FOLDER
+          for type in Base Reverse Forward; do
+            TYPE_FOLDER="${type}OMP-tsan"
+            echo "Processing '$TYPE_FOLDER' ..."
+            if [ -d $TYPE_FOLDER ]; then
+              pushd $TYPE_FOLDER
+              ls -lah
+              tar -zxvf install_bin.tgz
+              ls -lah install/bin/
+              cp -r install/bin/* $BIN_FOLDER;
+              popd;
+            fi
+          done
+          chmod a+x $BIN_FOLDER/*
+          ls -lahR $BIN_FOLDER
+      - name: Run Tests in Container
+        uses: docker://ghcr.io/su2code/su2/test-su2-tsan:230704-1323
+        with:
+          # -t <Tutorials-branch> -c <Testcases-branch>
+          args: -b ${{github.ref}} -t develop -c develop -s ${{matrix.testscript}}
+      - name: Cleanup
+        uses: docker://ghcr.io/su2code/su2/test-su2-tsan:230704-1323
+        with:
+          entrypoint: /bin/rm
+          args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
   unit_tests:
     runs-on: ${{ inputs.runner || 'ubuntu-latest' }}
     name: Unit Tests
